syntax = "proto3";

package ras.api.v1;

import "v8platform/rasapis/serializeapis/clusters.proto";
import "v8platform/rasapis/tagger.proto";
import "v8platform/rasapis/api/v1/param.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/v8platform/protos/v8platform/rasapis/api/v1";

service InitService {
  rpc Connect(ConnectMessage) returns (ConnectMessageAck) {};
  rpc Negotiate(NegotiateMessage) returns (google.protobuf.Empty) {};
}

message NegotiateMessage {
  int32 magic = 1;
  int32 protocol = 2;
  int32 version = 3;
}

message ConnectMessage {
  map<string, Param> params = 1;
}

message ConnectMessageAck {

}